@@ -4,6 +4,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import org.hibernate.internal.build.AllowSysOut;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.dao.DataAccessException;
@@ -20,10 +21,11 @@ public class CoronaVaccineRunners implements CommandLineRunner{
 	
 	@Override
 	public void run(String... args) throws Exception {
+		
 				try {
 				Iterable<CoronaVaccine> SavedVaccines=service.Registration_Vaccine(Arrays.asList(new CoronaVaccine(10,"Saicand","Interface",5,5000.5),
-																														 new CoronaVaccine(11,"jouliet","jomio",2,5000.5),
-																														 new CoronaVaccine(12,"jack","hedwad",1,5000.5)));
+																														 new CoronaVaccine(11,"jouliet","jomio",2,2000.5),
+																														 new CoronaVaccine(12,"jack","hedwad",1,4600.5)));
 				System.out.println("Registration companies");
 				SavedVaccines.forEach(CoronaVaccine ->System.out.println(CoronaVaccine.getRegNo()));
 				}
@@ -59,7 +61,10 @@ public class CoronaVaccineRunners implements CommandLineRunner{
 						System.out.println( "**************************************************");
 							
 						try {
-					service.FetchAllDetailsByids(List.of(10, 25,30)).forEach(CoronaVaccine ->System.out.println(CoronaVaccine));
+					//service.FetchAllDetailsByids(List.of(10, 25,30)).forEach(CoronaVaccine ->System.out.println(CoronaVaccine));
+					//service.FetchAllDetailsByids(List.of(10,5,6)).forEach(System.out::println);  // for each method
+				   //Arrays.asList(service.FetchAllDetailsByids(List.of(10,8,6))).stream().forEach(System.out::println); // stream api
+						Arrays.asList(service.FetchAllDetailsByids(List.of(8,6,5))).stream().map(s1->s1).forEach(System.out::println);
 						}
 						catch (DataAccessException dae) {
 							dae.printStackTrace();
